--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Using Node.js, Inquirer, and MySQL to create an application to manage a company's employee database.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
