--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "console.table": "^0.10.0",
     "dotenv": "^16.0.1",
     "inquirer": "^8.2.4",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "path": "^0.12.7"
   }
 }
